# dms

./: README.md  pyproject.toml  requirements.txt  setup.py
dms/: hooks.py  modules.txt
dms/document_management_system/doctype/business_partner/: business_partner.js  business_partner.json  business_partner.py  test_business_partner.py
dms/document_management_system/doctype/document/: document.js  document.json  document.py  test_document.py
dms/document_management_system/doctype/templates/: templates.js  templates.json  templates.py  test_templates.py
dms/document_management_system/doctype/types/: test_types.py  types.js  types.json  types.py
dms/document_management_system/workspace/document_management_system/: document_management_system.json
